fix max width on mobile

--- a/style.css
+++ b/style.css
@@ -268,6 +268,7 @@ nav.toggled ul.menu {
 	        align-items: center;
 }
 #content > div > div {
+	max-width: 100%;
 	padding-left: 2rem;
 	padding-right: 2rem;
 }
